force-app/main/default/objects/Lead/fields/AdditionalSalesHotChocolate__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSalesHotChocolate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Sales Hot Chocolate</label>
    <type>Checkbox</type>
</CustomField>