force-app/main/default/objects/Lead/fields/AdditionalSalesSugar__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSalesSugar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Sales Sugar</label>
    <type>Checkbox</type>
</CustomField>