force-app/main/default/objects/Lead/fields/AssignmentSource__c.field-meta.xml
<CustomField>
    <fullName>AssignmentSource__c</fullName>
    <description>Records which rule of the cascade applied. Basis for reporting and for deciding whether an assignment may be overwritten automatically.</description>
    <label>Assignment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creating User</fullName>
            </value>
            <value>
                <fullName>Postal Code</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Business Type KAM</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Telesales Queue</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>