force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Gastronomy</fullName>
            </value>
            <value>
                <fullName>Communal Catering</fullName>
            </value>
            <value>
                <fullName>Other Food Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>