force-app/main/default/objects/Lead/fields/CheckboxCallbackToday__c.field-meta.xml
<CustomField>
    <fullName>CheckboxCallbackToday__c</fullName>
    <description>Marks, when a callback date is entered is is &quot;today&quot; - used for flow to reopen leads</description>
    <formula>Callback__c = Today ()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkbox Callback Today</label>
    <type>Checkbox</type>
</CustomField>