force-app/main/default/objects/Lead/fields/CompetitorContractExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CompetitorContractExpiryDate__c</fullName>
    <label>Competitor Contract Expiry Date</label>
    <type>Date</type>
</CustomField>