force-app/main/default/objects/Lead/fields/ConditionChainParent__c.field-meta.xml
<CustomField>
    <fullName>ConditionChainParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Chain Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Condition Parent)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>