force-app/main/default/objects/Lead/fields/CreatedViaCaseScreenflow__c.field-meta.xml
<CustomField>
    <fullName>CreatedViaCaseScreenflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via Case Screenflow</label>
    <type>Checkbox</type>
</CustomField>