force-app/main/default/objects/Lead/fields/CurrentCoffeeSupplier__c.field-meta.xml
<CustomField>
    <fullName>CurrentCoffeeSupplier__c</fullName>
    <label>Current Coffee Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>