force-app/main/default/objects/Lead/fields/CurrentMachine__c.field-meta.xml
<CustomField>
    <fullName>CurrentMachine__c</fullName>
    <label>Current Machine</label>
    <type>TextArea</type>
</CustomField>