force-app/main/default/objects/Lead/fields/CurrentTeaSupplier__c.field-meta.xml
<CustomField>
    <fullName>CurrentTeaSupplier__c</fullName>
    <label>Current Tea Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>