force-app/main/default/objects/Lead/fields/CustomerGroupKey__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroupKey__c</fullName>
    <description>Business unit from SAP KNVV-KDGRP.</description>
    <label>Customer Group Key (SAP KDGRP)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>