force-app/main/default/objects/Lead/fields/DisqualificationReason__c.field-meta.xml
<CustomField>
    <fullName>DisqualificationReason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private customer</fullName>
            </value>
            <value>
                <fullName>Concerns export</fullName>
            </value>
            <value>
                <fullName>Bad data</fullName>
            </value>
            <value>
                <fullName>Training request</fullName>
            </value>
            <value>
                <fullName>Other reason</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>