force-app/main/default/objects/Lead/fields/DisqualificationReasonText__c.field-meta.xml
<CustomField>
    <fullName>DisqualificationReasonText__c</fullName>
    <label>Disqualification Reason Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>