force-app/main/default/objects/Lead/fields/DoubleOptinConfirmed__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptinConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Optin Confirmed</label>
    <type>Checkbox</type>
</CustomField>