force-app/main/default/objects/Lead/fields/DoubleOptinConfirmedDateTime__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptinConfirmedDateTime__c</fullName>
    <label>Double Optin Confirmed Date/Time</label>
    <type>DateTime</type>
</CustomField>