force-app/main/default/objects/Lead/fields/DoubleOptinRequested__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptinRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Optin Requested</label>
    <type>Checkbox</type>
</CustomField>