force-app/main/default/objects/Lead/fields/DoubleOptinRequestedDateTime__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptinRequestedDateTime__c</fullName>
    <label>Double Optin Requested Date/Time</label>
    <type>DateTime</type>
</CustomField>