force-app/main/default/objects/Lead/fields/DoubleOptinSent__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptinSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Optin Sent</label>
    <type>Checkbox</type>
</CustomField>