force-app/main/default/objects/Lead/fields/DoubleOptinSentDateTime__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptinSentDateTime__c</fullName>
    <label>Double Optin Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>