force-app/main/default/objects/Lead/fields/EMailOptoutDateTime__c.field-meta.xml
<CustomField>
    <fullName>EMailOptoutDateTime__c</fullName>
    <label>E-Mail Optout Date/Time</label>
    <type>DateTime</type>
</CustomField>