force-app/main/default/objects/Lead/fields/EstimatedSalesCoffee__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSalesCoffee__c</fullName>
    <formula>((((DailyNumberOfCups__c *8) / 1000) * 365) * 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated sales: Coffee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>