force-app/main/default/objects/Lead/fields/EstimatedSalesHotChocolate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSalesHotChocolate__c</fullName>
    <label>Estimated sales: Hot Chocolate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>