force-app/main/default/objects/Lead/fields/EstimatedSalesTea__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSalesTea__c</fullName>
    <label>Estimated sales: Tea</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>