force-app/main/default/objects/Lead/fields/EstimatedVolumeCoffee__c.field-meta.xml
<CustomField>
    <fullName>EstimatedVolumeCoffee__c</fullName>
    <label>Estimated volume: Coffee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>