force-app/main/default/objects/Lead/fields/FixedWaterConnection__c.field-meta.xml
<CustomField>
    <fullName>FixedWaterConnection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Water Connection</label>
    <type>Checkbox</type>
</CustomField>