force-app/main/default/objects/Lead/fields/GeneralComments__c.field-meta.xml
<CustomField>
    <fullName>GeneralComments__c</fullName>
    <label>General Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>