force-app/main/default/objects/Lead/fields/HashLastNameCompany__c.field-meta.xml
<CustomField>
    <fullName>HashLastNameCompany__c</fullName>
    <label>Hash: Last Name + Company</label>
    <length>32</length>
    <type>Text</type>
</CustomField>