force-app/main/default/objects/Lead/fields/HashStreetCompany__c.field-meta.xml
<CustomField>
    <fullName>HashStreetCompany__c</fullName>
    <label>Hash: Street + Company</label>
    <length>32</length>
    <type>Text</type>
</CustomField>