force-app/main/default/objects/Lead/fields/InterestedIn__c.field-meta.xml
<CustomField>
    <fullName>InterestedIn__c</fullName>
    <label>Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Hot chocolate</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>