force-app/main/default/objects/Lead/fields/InterestedInTea__c.field-meta.xml
<CustomField>
    <fullName>InterestedInTea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in tea</label>
    <type>Checkbox</type>
</CustomField>