force-app/main/default/objects/Lead/fields/IsInvoiceRecipient__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiceRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoice Recipient?</label>
    <type>Checkbox</type>
</CustomField>