force-app/main/default/objects/Lead/fields/KamKey__c.field-meta.xml
<CustomField>
    <fullName>KamKey__c</fullName>
    <description>Populated during the review step when the lead is identified as key account relevant.</description>
    <label>Key Account Key (SAP KVGR3)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>