force-app/main/default/objects/Lead/fields/LastDisqualified__c.field-meta.xml
<CustomField>
    <fullName>LastDisqualified__c</fullName>
    <label>Last Disqualified</label>
    <type>DateTime</type>
</CustomField>