force-app/main/default/objects/Lead/fields/LeadActivityIndicator__c.field-meta.xml
<CustomField>
    <fullName>LeadActivityIndicator__c</fullName>
    <formula>IF(
    ISBLANK(LastActivityDate),
    &quot;⚪ No activity yet&quot;,
    IF(
        TODAY() - LastActivityDate &lt;= 7,
        &quot;🟢 Active&quot;,
        IF(
            TODAY() - LastActivityDate &lt;= 14,
            &quot;🟡 Follow-up required&quot;,
            &quot;🔴 Inactive&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Activity Indicator</label>
    <type>Text</type>
</CustomField>