force-app/main/default/objects/Lead/fields/LeadAge__c.field-meta.xml
<CustomField>
    <fullName>LeadAge__c</fullName>
    <formula>IF(
TODAY() - DATEVALUE(CreatedDate) &gt; 2,
&quot;🔴 &quot; &amp;TEXT(TODAY() - DATEVALUE(CreatedDate)) &amp; &quot; Tage&quot;,
IF(
TODAY() - DATEVALUE(CreatedDate) &gt; 1,
&quot;🟡 &quot;&amp; TEXT(TODAY() - DATEVALUE(CreatedDate)) &amp; &quot; Tage&quot;,
&quot;🟢 &quot;&amp; TEXT(TODAY() - DATEVALUE(CreatedDate)) &amp; &quot; Tage&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age</label>
    <type>Text</type>
</CustomField>