force-app/main/default/objects/Lead/fields/LeadCallsLast21Days__c.field-meta.xml
<CustomField>
    <fullName>LeadCallsLast21Days__c</fullName>
    <label>Lead Calls Last 21 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>