force-app/main/default/objects/Lead/fields/LeadEngagementLastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LeadEngagementLastActivityDate__c</fullName>
    <label>Lead Engagement Last Activity Date</label>
    <type>Date</type>
</CustomField>