force-app/main/default/objects/Lead/fields/LeadEngagementLastCalculatedOn__c.field-meta.xml
<CustomField>
    <fullName>LeadEngagementLastCalculatedOn__c</fullName>
    <label>Lead Engagement Last Calculated On</label>
    <type>DateTime</type>
</CustomField>