force-app/main/default/objects/Lead/fields/LeadEngagementScore__c.field-meta.xml
<CustomField>
    <fullName>LeadEngagementScore__c</fullName>
    <description>Score 0–100</description>
    <label>Lead Engagement Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>