force-app/main/default/objects/Lead/fields/LeadEngagementStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadEngagementStatus__c</fullName>
    <label>Lead Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Observe</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>