force-app/main/default/objects/Lead/fields/LeadInteractionsLast90Days__c.field-meta.xml
<CustomField>
    <fullName>LeadInteractionsLast90Days__c</fullName>
    <label>Lead Interactions Last 90 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>