force-app/main/default/objects/Lead/fields/ListFilterLead__c.field-meta.xml
<CustomField>
    <fullName>ListFilterLead__c</fullName>
    <formula>If(and( or( OwnerId = $User.Id )), true ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Filter Lead</label>
    <type>Checkbox</type>
</CustomField>