force-app/main/default/objects/Lead/fields/MachineRequirements__c.field-meta.xml
<CustomField>
    <fullName>MachineRequirements__c</fullName>
    <label>Machine Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>