force-app/main/default/objects/Lead/fields/MemberOfChain__c.field-meta.xml
<CustomField>
    <fullName>MemberOfChain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member of Chain?</label>
    <type>Checkbox</type>
</CustomField>