force-app/main/default/objects/Lead/fields/MergedInto__c.field-meta.xml
<CustomField>
    <fullName>MergedInto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged Into</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Merge Master for</relationshipLabel>
    <relationshipName>MergeMasterFor</relationshipName>
    <type>Lookup</type>
</CustomField>