force-app/main/default/objects/Lead/fields/MergeMaster__c.field-meta.xml
<CustomField>
    <fullName>MergeMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge Master</label>
    <type>Checkbox</type>
</CustomField>