force-app/main/default/objects/Lead/fields/NewsletterOptedIn__c.field-meta.xml
<CustomField>
    <fullName>NewsletterOptedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter Optin</label>
    <type>Checkbox</type>
</CustomField>