force-app/main/default/objects/Lead/fields/NewsletterOptinDateTime__c.field-meta.xml
<CustomField>
    <fullName>NewsletterOptinDateTime__c</fullName>
    <label>Newsletter Optin Date/Time</label>
    <type>DateTime</type>
</CustomField>