force-app/main/default/objects/Lead/fields/ResponsibleEmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleEmployeeNo__c</fullName>
    <description>Matching anchor against User.EmployeeNumber.</description>
    <label>Responsible Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>