force-app/main/default/objects/Lead/fields/RetailCompanyChainQueried__c.field-meta.xml
<CustomField>
    <fullName>RetailCompanyChainQueried__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Company/Chain Queried?</label>
    <type>Checkbox</type>
</CustomField>