force-app/main/default/objects/Lead/fields/SalesCategory__c.field-meta.xml
<CustomField>
    <fullName>SalesCategory__c</fullName>
    <label>Sales Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesCategory</valueSetName>
    </valueSet>
</CustomField>