force-app/main/default/objects/Lead/fields/SalesDistrictKey__c.field-meta.xml
<CustomField>
    <fullName>SalesDistrictKey__c</fullName>
    <description>Sales district from SAP KNVV-BZIRK.</description>
    <label>Sales District Key (SAP BZIRK)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>