force-app/main/default/objects/Lead/fields/SalesGroupKey__c.field-meta.xml
<CustomField>
    <fullName>SalesGroupKey__c</fullName>
    <description>Result of the assignment cascade. Inherited to the account on lead conversion.</description>
    <label>Sales Group Key (SAP VKGRP)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>