force-app/main/default/objects/Lead/fields/SalesOfficeKey__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeKey__c</fullName>
    <description>Sales office from SAP KNVV-VKBUR.</description>
    <label>Sales Office Key (SAP VKBUR)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>