force-app/main/default/objects/Lead/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <label>Seats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-150</fullName>
            </value>
            <value>
                <fullName>151-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>&gt;500</fullName>
            </value>
            <value>
                <fullName>Only standing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>