force-app/main/default/objects/Lead/fields/SelectionOfBeverages__c.field-meta.xml
<CustomField>
    <fullName>SelectionOfBeverages__c</fullName>
    <label>Selection of Beverages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>