force-app/main/default/objects/Lead/fields/StatisticChainHead__c.field-meta.xml
<CustomField>
    <fullName>StatisticChainHead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistic Chain Head</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Statistic Chain Head)</relationshipLabel>
    <relationshipName>LeadsStatisticChainHead</relationshipName>
    <type>Lookup</type>
</CustomField>