force-app/main/default/objects/Lead/fields/StatisticChainParent__c.field-meta.xml
<CustomField>
    <fullName>StatisticChainParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistic Chain Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Statistic Parent)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>