force-app/main/default/objects/Lead/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest for product portfolio</fullName>
            </value>
            <value>
                <fullName>Appointment request</fullName>
            </value>
            <value>
                <fullName>Request for actual order</fullName>
            </value>
            <value>
                <fullName>Request for export</fullName>
            </value>
            <value>
                <fullName>General questions about the company</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>