force-app/main/default/objects/Lead/fields/TaxID__c.field-meta.xml
<CustomField>
    <fullName>TaxID__c</fullName>
    <inlineHelpText>Diese Nummer besteht aus genau 11 Ziffern und enthält keine Buchstaben oder Sonderzeichen.
Beispiel: 12 345 678 901</inlineHelpText>
    <label>Tax ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>