force-app/main/default/objects/Lead/fields/TaxNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxNumber__c</fullName>
    <inlineHelpText>Die Steuernummer verfügt über ein bundeseinheitliches 13-stelliges Format. Zulässig sind nur Ziffern. Bitte darauf achten, dass keine Leerzeichen oder Sonderzeichen enthalten sind.

Beispiel: 123/456/78901</inlineHelpText>
    <label>Tax Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>