force-app/main/default/objects/Lead/fields/TerritoryAssignmentManual__c.field-meta.xml
<CustomField>
    <fullName>TerritoryAssignmentManual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Protects a manually set responsibility from being overwritten by automated assignment.</description>
    <label>Manual Territory Assignment</label>
    <type>Checkbox</type>
</CustomField>