force-app/main/default/objects/Lead/fields/TotalPotential__c.field-meta.xml
<CustomField>
    <fullName>TotalPotential__c</fullName>
    <formula>EstimatedSalesCoffee__c +  EstimatedSalesTea__c +  EstimatedSalesHotChocolate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>