force-app/main/default/objects/Lead/fields/UpdatedMachine__c.field-meta.xml
<CustomField>
    <fullName>UpdatedMachine__c</fullName>
    <label>Updated Machine</label>
    <type>TextArea</type>
</CustomField>