force-app/main/default/objects/Lead/fields/WhereAreHotBeveragesServed__c.field-meta.xml
<CustomField>
    <fullName>WhereAreHotBeveragesServed__c</fullName>
    <label>Where Are Hot Beverages Served?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast area</fullName>
            </value>
            <value>
                <fullName>Reception/Lobby</fullName>
            </value>
            <value>
                <fullName>Conference Rooms</fullName>
            </value>
            <value>
                <fullName>Room/Mini Bar</fullName>
            </value>
            <value>
                <fullName>Restaurant/Bar</fullName>
            </value>
            <value>
                <fullName>Employee area/Backoffice</fullName>
            </value>
            <value>
                <fullName>Customer area</fullName>
            </value>
            <value>
                <fullName>Counter/Bar</fullName>
            </value>
            <value>
                <fullName>Self service station</fullName>
            </value>
            <value>
                <fullName>To go offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>